# chorgly

./: .gitignore  Cargo.toml  Dockerfile  LICENCE.md  README.md  clanker-housekeeping
.github/workflows/: build.yml  docker.yml  integration.yml
claude/: questions.md
claude/context/: issue3_status.yaml  issue4_status.yaml  issue5_status.yaml  prototype.yaml  seen_remote_main_head.yaml  session.yaml
claude/design/: chorgly.md  claude-base.md  original-issue.json
docs/: app.css  app.html  app.js  index.html  style.css
src/backend/: Cargo.toml
src/backend/src/: main.rs  persist.rs  session.rs  state.rs
src/core/: Cargo.toml
src/core/src/: chore.rs  db.rs  event.rs  lib.rs  proto.rs  user.rs
src/frontend/: Cargo.toml
src/frontend/src/: lib.rs  render.rs  state.rs
tests/: gen_testdata.py  test_auth.py
tools/admin/: Cargo.toml
tools/admin/src/: main.rs
