[package]
name = "chorgly-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chorgly-core = { path = "../core" }
serde = { workspace = true }
ciborium = { workspace = true }
# js feature enables uuid v4 on wasm32-unknown-unknown via wasm-bindgen
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlElement",
  "WebSocket", "MessageEvent", "Event", "BinaryType",
  "Blob", "FileReader", "console",
] }
js-sys = "0.3"
